--- a/.github/workflows/sync_to_hub.yml
+++ b/.github/workflows/sync_to_hub.yml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Push to Hub
+      - name: Install Hugging Face Hub CLI
+        run: pip install huggingface_hub
+
+      - name: Upload to Hub
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git config --global user.email "bot@github.com"
-          git config --global user.name "GitHub Actions"
-          git remote add space https://rubenppombo:$HF_TOKEN@huggingface.co/spaces/rubenppombo/birds_backend
-          git push --force space main
+          huggingface-cli upload rubenppombo/birds_backend . --repo-type space --token $HF_TOKEN
